# madjik

./: .gitignore  .prettierignore  README.md  biome.json  drizzle.config.ts  eslint.config.js  index.html  kysely-codegen.config.ts  lefthook.yaml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.js  vite.config.ts
.cargo/: config.toml
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 0000_curvy_wraith.sql  0000_cute_gwen_stacy.sql  0000_sad_hardball.sql  20240528000000_initial_schema.sql  20240528000001_add_updated_at_columns.sql
src-tauri/migrations/meta/: 0000_snapshot.json  _journal.json
src-tauri/src/: lib.rs  main.rs  utils.rs
src-tauri/src/commands/: appointment.rs  doctor_note.rs  mod.rs  patient.rs  prescription.rs
src-tauri/src/db/: mod.rs  models.rs  repository.rs
src/components/: AddPatientModal.tsx  Navbar.tsx  PatientTable.tsx
src/features/patient/: types.ts  validators.ts
src/features/patient/components/: PatientForm.tsx
src/features/patient/hooks/: usePatients.ts
src/hooks/: useModal.ts
src/layouts/: RootLayout.tsx
src/lib/db/: index.ts  types.ts
src/lib/db/schema/: addresses.ts  emergencyContactAddresses.ts  emergencyContactPhoneNumbers.ts  emergencyContacts.ts  patientAddresses.ts  patientPhoneNumbers.ts  patients.ts  phoneNumbers.ts
src/pages/: Dashboard.tsx
src/routes/: dashboard.tsx  demo.tsx
src/types/: appointment.ts  barrel.ts  db.d.ts  doctor-note.ts  index.ts  patient.ts  prescription.ts
