[package]
name = "madjik"
version = "0.1.0"
description = "An Electronic Health Records Management System"
authors = ["jcajuab", "Kau4r"]
repository = "https://github.com/jcajuab/madjik"
edition = "2021"

[lib]
name = "madjik_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.5.0", features = [] }
tauri-plugin-sql = { version = "2.2.0", features = ["sqlite"] }
